Updated page title and added footer with links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/samanthabh">Samantha Burfield-Haar</a>, is
+      <a href="https://github.com/samanthabh/weather-app"
+        >open-sourced on GitHub</a
+      >
+      and <a href="https://weather-app-sbh.netlify.app/">hosted on Netlify</a>
+    </footer>
+  </body>
 </html>
