Basic HTML added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>My Weather App</title>
   </head>
   <body>
+    <header>
+      <form class="search-form">
+        <input type="search" placeholder="Enter a city" />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+
+    <h1>London</h1>
+    <h2>Tuesday 14/10/2025</h2>
+    <h3>12:57</h3>
+    <img
+      src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+      alt="weather-icon"
+    />
+    <h1>15ºC</h1>
+    <p>
+      Cloudy<br />
+      Humidty: 10%<br />
+      Wind: 2mph
+    </p>
     <footer>
       This project was coded by
       <a href="https://github.com/samanthabh">Samantha Burfield-Haar</a>, is
