added js file and created city search function to change city name on page

--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
         and <a href="https://weather-app-sbh.netlify.app/">hosted on Netlify</a>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
