Weather forecast template and styling added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,48 @@
           Wind: <span class="colour-blue" id="wind-speed"></span>
         </p>
       </div>
+      <div class="weather-forecast">
+        <div class="forecast-day">
+          <div class="forecast-date">Fri</div>
+          <div class="forecast-icon">☀️</div>
+          <div class="forecast-temperatures">
+            <div class="forecast-temp"><strong>10º</strong></div>
+            <div class="forecast-temp">5º</div>
+          </div>
+        </div>
+        <div class="forecast-day">
+          <div class="forecast-date">Fri</div>
+          <div class="forecast-icon">☀️</div>
+          <div class="forecast-temperatures">
+            <div class="forecast-temp"><strong>10º</strong></div>
+            <div class="forecast-temp">5º</div>
+          </div>
+        </div>
+        <div class="forecast-day">
+          <div class="forecast-date">Fri</div>
+          <div class="forecast-icon">☀️</div>
+          <div class="forecast-temperatures">
+            <div class="forecast-temp"><strong>10º</strong></div>
+            <div class="forecast-temp">5º</div>
+          </div>
+        </div>
+        <div class="forecast-day">
+          <div class="forecast-date">Fri</div>
+          <div class="forecast-icon">☀️</div>
+          <div class="forecast-temperatures">
+            <div class="forecast-temp"><strong>10º</strong></div>
+            <div class="forecast-temp">5º</div>
+          </div>
+        </div>
+        <div class="forecast-day">
+          <div class="forecast-date">Fri</div>
+          <div class="forecast-icon">☀️</div>
+          <div class="forecast-temperatures">
+            <div class="forecast-temp"><strong>10º</strong></div>
+            <div class="forecast-temp">5º</div>
+          </div>
+        </div>
+      </div>
       <footer>
         This project was coded by
         <a href="https://github.com/samanthabh">Samantha Burfield-Haar</a>, is
