--- a/index.html
+++ b/index.html
@@ -40,48 +40,7 @@
           Wind: <span class="colour-blue" id="wind-speed"></span>
         </p>
       </div>
-      <div class="weather-forecast">
-        <div class="forecast-day">
-          <div class="forecast-date">Fri</div>
-          <div class="forecast-icon">☀️</div>
-          <div class="forecast-temperatures">
-            <div class="forecast-temp"><strong>10º</strong></div>
-            <div class="forecast-temp">5º</div>
-          </div>
-        </div>
-        <div class="forecast-day">
-          <div class="forecast-date">Fri</div>
-          <div class="forecast-icon">☀️</div>
-          <div class="forecast-temperatures">
-            <div class="forecast-temp"><strong>10º</strong></div>
-            <div class="forecast-temp">5º</div>
-          </div>
-        </div>
-        <div class="forecast-day">
-          <div class="forecast-date">Fri</div>
-          <div class="forecast-icon">☀️</div>
-          <div class="forecast-temperatures">
-            <div class="forecast-temp"><strong>10º</strong></div>
-            <div class="forecast-temp">5º</div>
-          </div>
-        </div>
-        <div class="forecast-day">
-          <div class="forecast-date">Fri</div>
-          <div class="forecast-icon">☀️</div>
-          <div class="forecast-temperatures">
-            <div class="forecast-temp"><strong>10º</strong></div>
-            <div class="forecast-temp">5º</div>
-          </div>
-        </div>
-        <div class="forecast-day">
-          <div class="forecast-date">Fri</div>
-          <div class="forecast-icon">☀️</div>
-          <div class="forecast-temperatures">
-            <div class="forecast-temp"><strong>10º</strong></div>
-            <div class="forecast-temp">5º</div>
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast" id="weather-forecast"></div>
       <footer>
         This project was coded by
         <a href="https://github.com/samanthabh">Samantha Burfield-Haar</a>, is
